Add sum ints from text file; small adds

--- a/TODO
+++ b/TODO
@@ -4,3 +4,8 @@
   http://benmabey.com/2011/08/14/word-break-in-clojure-and-ruby-and-laziness-in-ruby.html
   http://pastebin.com/0L5F9uKA
   http://programmingpraxis.com/2011/08/12/word-breaks/2/
+
+General notes:
+
+;; Q: if I eval (map #(* (inc row) %) (range 13)) can I temp bind row?
+;; Wrap in let, or smt
